--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick_Braz.web</title>
-    <link rel="icon" type="image/x-icon" href="../Patrick_Braz_AV1/IMG/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="IMG/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,31 +31,31 @@
             <div class="game-gallery">
                 <div class="game-item">
                     <a href="https://store.steampowered.com/app/49520/Borderlands_2/" target="_blank">
-                        <img src="../Patrick_Braz_AV1/IMG/Game_Header_IMG/BL2header.jpg" alt="Borderlands 2">
+                        <img src="IMG/Game_Header_IMG/BL2header.jpg" alt="Borderlands 2">
                         <p>Borderlands 2</p>
                     </a>
                 </div>
                 <div class="game-item">
                     <a href="https://store.steampowered.com/app/218620/PAYDAY_2/" target="_blank">
-                        <img src="../Patrick_Braz_AV1/IMG/Game_Header_IMG/Payday2header.jpg" alt="Payday 2">
+                        <img src="IMG/Game_Header_IMG/Payday2header.jpg" alt="Payday 2">
                         <p>Payday 2</p>
                     </a>
                 </div>
                 <div class="game-item">
                     <a href="https://store.steampowered.com/app/683320/GRIS/" target="_blank">
-                        <img src="../Patrick_Braz_AV1/IMG/Game_Header_IMG/GRISheader.jpg" alt="GRIS">
+                        <img src="IMG/Game_Header_IMG/GRISheader.jpg" alt="GRIS">
                         <p>GRIS</p>
                     </a>
                 </div>
                 <div class="game-item">
                     <a href="https://www.minecraft.net/pt-br/store/minecraft-java-bedrock-edition-pc?tabs=%7B%22details%22%3A0%7D" target="_blank">
-                        <img src="../Patrick_Braz_AV1/IMG/Game_Header_IMG/Minecraftheader.jpg" alt="Minecraft">
+                        <img src="IMG/Game_Header_IMG/Minecraftheader.jpg" alt="Minecraft">
                         <p>Minecraft</p>
                     </a>
                 </div>
                 <div class="game-item">
                     <a href="https://store.steampowered.com/app/428550/Momodora_Reverie_Under_The_Moonlight/" target="_blank">
-                        <img src="../Patrick_Braz_AV1/IMG/Game_Header_IMG/Momodoraheader.jpg" alt="Momodora">
+                        <img src="IMG/Game_Header_IMG/Momodoraheader.jpg" alt="Momodora">
                         <p>Momodora</p>
                     </a>
                 </div>
@@ -128,22 +128,22 @@
             <p><a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer" target="_blank">Live Server</a></p>  
 
             <div class="imgflex">
-                <img src="../Patrick_Braz_AV1/Portifolio/explicacao.jpg" alt="explicacao_IMG" height="280px"; width="800px">
+                <img src="Portifolio/explicacao.jpg" alt="explicacao_IMG" height="280px"; width="800px">
                 <p class="imgflexcontent"> Depois de baixar a extensão, para rodar esses projetos, vá até a pasta "Patrick_Braz_AV1-portifolio" e escolha qual dos dois quer rodar, abra sua respectiva pasta e clique com o botão direito do mouse no index.html do projeto escolhido e escolha "Open with live Server"</p>
             </div>
 
             <div class="imgflex">
-                <img src="../Patrick_Braz_AV1/Portifolio/Space_Invaders_TEST/Space_Invaders_TEST_IMG.jpeg" alt="Space_Invaders_TEST_IMG" height="280px">
+                <img src="Portifolio/Space_Invaders_TEST/Space_Invaders_TEST_IMG.jpeg" alt="Space_Invaders_TEST_IMG" height="280px">
                 <p class="imgflexcontent"> Este projeto é um clone do clássico jogo <a href="https://pt.wikipedia.org/wiki/Space_Invaders" target="_blank"> Space Invaders</a>, desenvolvido em HTML5, CSS e JavaScript</p>
             </div>
             
             <div class="imgflex">
-                <img src="../Patrick_Braz_AV1/Portifolio/3D_Object_TEST/3D_Object_TEST_IMG.jpeg" alt="3D_Object_TEST_IMG" height="280px">
+                <img src="Portifolio/3D_Object_TEST/3D_Object_TEST_IMG.jpeg" alt="3D_Object_TEST_IMG" height="280px">
                 <p class="imgflexcontent"> Simulação de um software de visualização 3D, podendo controlar o formato, tamanho e cor do objeto, assim como a cor e distância da luz, para poder simular o efeito de uma fonte de luz ao seu lado</p> 
             </div>
 
             <div class="imgflex">
-                <img src="../Patrick_Braz_AV1/Portifolio/Disfigure_IMG.jpg" alt="Disfigure_IMG" height="280px">
+                <img src="Portifolio/Disfigure_IMG.jpg" alt="Disfigure_IMG" height="280px">
                 <p class="imgflexcontent"> Lucas Steiner passou anos procurando por sua mãe desaparecida, e, quando quase perdia as esperanças, encontrou uma pista que o levou a um estranho asilo abandonado. Disfigure, um jogo de terror em pixel art, desafia convenções do gênero ao usar mecânicas de luz e sombra para criar tensão e imersão. A visão limitada do jogador concentra a atenção no que é revelado pela luz, enquanto sons sugerem perigos ocultos nas sombras. Durante o jogo, pistas deixadas pela equipe do asilo ajudam a montar o enredo, enquanto o jogador tenta evitar os misteriosos habitantes do local.</p>
             </div>
         </section>
@@ -152,22 +152,22 @@
             <h2>Contato</h2>
             <p>Email: patrick.braz@icloud.com</p>
             <a href="https://wa.me/55997753792" target="_blank">
-                <img src="../Patrick_Braz_AV1/IMG/Redes/logo-whatsapp-verde-icone-ios-android-4096.jpg" alt="Whatsapp" style="width:60px;height:60px;">
+                <img src="IMG/Redes/logo-whatsapp-verde-icone-ios-android-4096.jpg" alt="Whatsapp" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
             <a href="https://www.linkedin.com/in/patrickbraz935115" target="_blank">
-                <img src="../Patrick_Braz_AV1/IMG/Redes/logo-linkedin-icon-4096.jpg" alt="LinkedIn" style="width:60px;height:60px;">
+                <img src="IMG/Redes/logo-linkedin-icon-4096.jpg" alt="LinkedIn" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
             <a href="https://www.instagram.com/patrickdefarias/" target="_blank">
-                <img src="../Patrick_Braz_AV1/IMG/Redes/InstagramLOGO.jpg" alt="Instagram" style="width:60px;height:60px;">
+                <img src="IMG/Redes/InstagramLOGO.jpg" alt="Instagram" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
             <a href="https://www.twitch.tv/zombiestheory" target="_blank">
-                <img src="../Patrick_Braz_AV1/IMG/Redes/twitch_PNG48.jpg" alt="Twitch" style="width:60px;height:60px;">
+                <img src="IMG/Redes/twitch_PNG48.jpg" alt="Twitch" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
             <a href="https:warpcast.com/zombiestheory115" target="_blank">
-                <img src="../Patrick_Braz_AV1/IMG/Redes/Warpcast.jpg" alt="Warpcast" style="width:60px;height:60px;">
+                <img src="IMG/Redes/Warpcast.jpg" alt="Warpcast" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
             <a href="https://discordapp.com/users/262068780887179275" target="_blank">
-                <img src="../Patrick_Braz_AV1/IMG/Redes/discord.jpg" alt="Discord" style="width:60px;height:60px;">
+                <img src="IMG/Redes/discord.jpg" alt="Discord" style="width:60px;height:60px;">
             </a><br><br><br>
             <form action="contato_enviado.html" method="post"> <!-- taget="_blank"-->
                 <label for="fname">Primeiro Nome:</label><br>
