--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             <div class="imgflex">
                 <img src="Portifolio/Space_Invaders_TEST/Space_Invaders_TEST_IMG.jpeg" alt="Space_Invaders_TEST_IMG" height="280px">
-                <p class="imgflexcontent"> Este projeto é um clone do clássico jogo <a href="https://pt.wikipedia.org/wiki/Space_Invaders" target="_blank"> Space Invaders</a>, desenvolvido em HTML5, CSS e JavaScript</p>
+                <p class="imgflexcontent"> <a href="Portifolio/3D_Object_TEST/index.html" target="_blank"> Este projeto</a> é um clone do clássico jogo <a href="https://pt.wikipedia.org/wiki/Space_Invaders" target="_blank"> Space Invaders</a>, desenvolvido em HTML5, CSS e JavaScript</p>
             </div>
             
             <div class="imgflex">
