--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <a href="https://www.twitch.tv/zombiestheory" target="_blank">
                 <img src="IMG/Redes/twitch_PNG48.jpg" alt="Twitch" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
-            <a href="https:warpcast.com/zombiestheory115" target="_blank">
+            <a href="https://warpcast.com/zombiestheory115" target="_blank">
                 <img src="IMG/Redes/Warpcast.jpg" alt="Warpcast" style="width:60px;height:60px;">
             </a> &nbsp;&nbsp;
             <a href="https://discordapp.com/users/262068780887179275" target="_blank">
